PostreSQL set up. Minor changes left.

--- a/academic_assessment_system_backend/src/main/resources/application-dev.properties
+++ b/academic_assessment_system_backend/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:2345/academic_assessment_system?useUnicode=true&characterEncoding=UTF-8&serverTimezone=CET
-spring.datasource.username=emt
-spring.datasource.password=emt
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:postgresql://localhost:2345/academic_assessment_system
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.show-sql=true
