--- a/academic_assessment_system_backend/database/docker-compose.yml
+++ b/academic_assessment_system_backend/database/docker-compose.yml
@@ -1,15 +1,17 @@
 services:
   db:
+    container_name: academic-assessment-system-db
     image: postgres:17.4
+    env_file:
+      - ../.env
     restart: always
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      POSTGRES_DB: academic_assessment_system
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./views.sql:/docker-entrypoint-initdb.d/views.sql
     ports:
       - 2345:5432
 volumes:
