--- a/academic_assessment_system_backend/src/main/resources/application.properties
+++ b/academic_assessment_system_backend/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8080
 spring.datasource.url=jdbc:h2:mem:academic_assessment_system
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-spring.profiles.active=test
+spring.profiles.active=dev
